[package]
name = "northern_branch"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
strum = { version = "0.27.1", features = ["derive"] }

[lints.rust]
dead_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
pedantic = "warn"
nursery = "warn"
